fix logo size on small screens, only show 'my account' on small screens

--- a/src/app/share-preview/components/share-preview/share-preview.component.scss
+++ b/src/app/share-preview/components/share-preview/share-preview.component.scss
@@ -44,11 +44,30 @@ $share-preview-banner-height: 100px;
     align-items: center;
   }
 
-  .banner-logo {
-    flex: 0 0 auto;
-    width: 200px;
+  .banner-logo-wrapper {
+    flex: 0 0 200px;
+    img {
+      width: 100%;
+    }
   }
 
+  @media screen and (max-width: 480px) {
+    .banner-logo-wrapper {
+      flex: 0 1 200px;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    .banner-button-full-email {
+      display: none;
+    }
+  }
+
+  @media screen and (min-width: 501px) {
+    .banner-button-no-email {
+      display: none;
+    }
+  }
 
 }
 
